# DavisAutonomousRaceCar

./: CMakeList.txt  CMakeLists.txt  LICENSE  MedialAxis.py  MidPointCalc.py  README.md  RowbyRow.py  ThinningAlgorithm.cpp  bringup_launch_test.py  elapsed_time.cpp  elapsed_time_node.cpp  issues_and_solutions.md  package.xml  run_auto.sh  test_launch.py  test_run.cpp  test_run_node.cpp
CNN/: README.md  cnn_model.py  cnn_pipeline.ipynb  imageAckermannSync.py  imageAckermannTimestamps.py  image_evaluator.py  organize_selected_data.py  plot_timestamps.py  proposal_pipeline.md  timestamp_analysis.py  visualize_driving_instructions.py
PerspectiveTransform/: README.md  apply_transform.py  extract_image.py  extract_images.py  find_coordinate.py  homography_generator.py  perspective.py  perspectiveTransform_3.0.py  perspectiveTransform_autoHgenerate.py  perspectiveTransform_manual.py  perspective_Transform4.0.py  perspective_launch.py  perspective_transform_0.0.py  perspective_transform_1.0.py  perspective_view.py  thinningAlgorithm.cpp
Raceline-Optimization/: Readme.md  map_converter.ipynb  sanity_check.ipynb  visualize_raceline.ipynb
Stitching/: stiching_manual.py
automatic_bitmask_stitching/: LangSAM.ipynb  README.md  bitmaskStitcher.py  extract_selected_images.py  imagePoseSync.py  imagePoseTimestamps.py  image_evaluator.py  manual_bitmask_placer.py  plot_timestamps.py  requirements.txt  timestamp_analysis.py
bag_extraction/: extract_ackermann.py  extract_pose.py
bitmask_filtering/: README.md  bitmask_filtering.py  bitmask_filtering_manual.py  setup.py  (+1 more)
(+44 files in other folders)
