<package format="3">
  <name>elapsed_time</name>
  <version>0.0.1</version>
  <description>Elapsed Time Publisher that publishes elapsed time every 0.1s</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
